# just-rag-it

./: .gitignore  CONTRIBUTING.md  EXTRACTION_SUMMARY.md  LICENSE  README.md  pyproject.toml
examples/: quickstart.py  yaml_collection.py
examples/collections/: documentation.yaml  mixed_content.yaml  python_codebase.yaml
justragit/: __init__.py  api.py  config.py
justragit/core/: __init__.py  chunker.py  embeddings.py  file_discovery.py  pdf_extractor.py  vector_store.py
justragit/providers/: __init__.py
tests/: __init__.py  test_chunker.py
